Fix a layout issue in Skills section
- Add a condition when the screen is smaller than 1200px but bigger than 1000px

--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -75,8 +75,13 @@
     opacity: 1;
   }
 }
+@media (max-width: 1300px) {
+  .category ul li {
+    padding-left: 30px;
+  }
+}
 /* Media query for viewports smaller than 1000px */
-@media (max-width: 1200px) {
+@media (max-width: 1000px) {
   .myskills {
     grid-template-columns: 1fr;
     width: 90%;
